--- a/hw_1/.gitignore
+++ b/hw_1/.gitignore
@@ -1,15 +1,12 @@
-# Игнорировать виртуальное окружение
-.venv/
-env/
 
-# Игнорировать файлы Python
+
+# Python
 __pycache__/
 *.pyc
-
-# Игнорировать IDE и редакторы
-.vscode/
-.idea/
-
-# Игнорировать логи и временные файлы
+*.pyo
+*.pyd
 *.log
-*.tmp
+
+# Virtual environments
+.venv/
+env/
